add email verify func
