# routes/roadmapRoutes.js
@@ -1,14 +1,16 @@
 const express = require('express');
 const router = express.Router();
 const { generateRoadmap, getRoadmapHistory, getRoadmapById, deleteRoadmap, reviewRoadmap, updateRoadmap } = require('../controllers/roadmapController');
-const { protect } = require('../middleware/authMiddleware');
+const { protect, isVerified } = require('../middleware/authMiddleware');
 const { validateRoadmapGeneration, validateMongoId } = require('../validators/roadmapValidator');
 
-router.post('/generate', protect, validateRoadmapGeneration, generateRoadmap);
-router.get('/', protect, getRoadmapHistory);
-router.get('/:id', protect, validateMongoId('id'), getRoadmapById);
-router.delete('/:id', protect, validateMongoId('id'), deleteRoadmap);
-router.post('/review', protect, reviewRoadmap);
-router.put('/:id', protect, validateMongoId('id'), updateRoadmap);
+
+router.use(protect, isVerified);
+router.post('/generate', validateRoadmapGeneration, generateRoadmap);
+router.get('/', getRoadmapHistory);
+router.get('/:id', validateMongoId('id'), getRoadmapById);
+router.delete('/:id', validateMongoId('id'), deleteRoadmap);
+router.post('/review', reviewRoadmap);
+router.put('/:id', validateMongoId('id'), updateRoadmap);
 
 module.exports = router;
